--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -75,7 +75,8 @@ jobs:
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/" \
-            --cacheDir "${{ runner.temp }}/hugo_cache"
+            --cacheDir "${{ runner.temp }}/hugo_cache" \
+            --buildFuture
       - name: Cache Save
         id: cache-save
         uses: actions/cache/save@v4
