--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-simple"]
 	path = themes/hugo-simple
 	url = https://github.com/maolonglong/hugo-simple.git
+[submodule "themes/hugo-vitae"]
+	path = themes/hugo-vitae
+	url = https://codeberg.org/farooqkz/hugo-vitae
