--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ BaseURL = "http://ranhya.github.io/"
 languageCode = "en"
 defaultContentLanguage = "en"
 author = "Nasu Rei"
-title = "Ranhya's Blog"
+title = "૮ ・ﻌ・ა"
 theme = "hugo-vitae"
 
 enableRobotsTXT = true
