--- a/hugo.toml
+++ b/hugo.toml
@@ -128,6 +128,11 @@ weight = 1
 [[menu.main]]
 name = "Categories"
 url = "/category"
+weight = 4
+
+[[menu.main]]
+name = "Tags"
+url = "tags"
 weight = 5
 
 [[menu.main]]
