--- a/hugo.toml
+++ b/hugo.toml
@@ -59,7 +59,7 @@ pagerSize = 10
 	#disableTaxoTypes = [""]
 
 	# Custom CSS applied to default styles. (Path could be "static/css/")
-	customcss = "/static/css/Markdown.css"
+	customcss = "/static/css/"
 
 	# Show reading time on a post
 	readingTime = true
