Testing idk if this’ll work tho

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/hugo-vitae"]
 	path = themes/hugo-vitae
 	url = https://codeberg.org/farooqkz/hugo-vitae
+[submodule "themes/typographical"]
+	path = themes/typographical
+	url = https://github.com/theramiyer/typographical-hugo.git
