--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
-baseURL: https://blog.ramiyer.me
-languageCode: en-IN
+baseURL: https://ranya.run
+languageCode: en
 title: Ran's Blog
 theme: typographical
 canonifyURLs: true
@@ -14,7 +14,6 @@ params:
   enableAutoAttribution: true
   enableDevanagari: true
   enableSharing: true
-    username: ramiyer
   copyright:
     icon: <i class="fab fa-creative-commons"></i>&thinsp;<i class="fab
       fa-creative-commons-by"></i>&thinsp;<i class="fab
