--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: https://ranya.run
 languageCode: en
-title: Ran's Blog
+title: Ran’s Blog
 theme: typographical
 canonifyURLs: true
 enableRobotsTXT: true
@@ -10,12 +10,40 @@ summaryLength: 50
 params:
   author:
     name: Nasu Rei
-  description: Ran play game!
+    url: https://ranya.run
+    x: N/A
+    facebook: N/A
+    razorpay: N/A
+  description: Ran play game.
   enableAutoAttribution: true
   enableDevanagari: true
   enableSharing: true
+  applePodcastsId: N/A
+  googlePodcastsId: N/A
+  privacyPolicyUrl: /privacy/
+  postFooter: I drink glue!
+  amazon:
+    domain: N/A
+    trackingId: N/A
+  mastodon:
+    server: N/A
+    username: N/A
+  copyright:
+    icon: <i class="fab fa-creative-commons"></i>&thinsp;<i class="fab
+      fa-creative-commons-by"></i>&thinsp;<i class="fab
+      fa-creative-commons-nc"></i>&thinsp;<i class="fab
+      fa-creative-commons-sa"></i>
+    message: "Ranhya 2025"
   dropCap:
     enable: true
+  contactForm:
+    id: xjvpplyr
+  plausible:
+    enable: false
+    domain: ranya.run
+  googleAnalytics:
+    enable: false
+
 privacy:
   x:
     enableDNT: true
