--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: https://ranya.run
-languageCode: en
-title: Ran’s Blog
+languageCode: en-IN
+title: Ram’s blog
 theme: typographical
 canonifyURLs: true
 enableRobotsTXT: true
@@ -9,35 +9,45 @@ summaryLength: 50
 
 params:
   author:
-    name: Nasu Rei
-    url: https://ranya.run
-    x: ""
-    facebook: ""
-    razorpay: ""
-  description: Ran play game.
+    name: Ram Iyer
+    url: https://ramiyer.me
+    x: iamramiyer
+    facebook: iamramiyer
+    razorpay: pl_G7QWxZCN9t3mZ1
+  description: For what it’s worth
   enableAutoAttribution: true
   enableDevanagari: true
   enableSharing: true
-  applePodcastsId: ""
-  googlePodcastsId: ""
+  applePodcastsId: id1448518505
+  googlePodcastsId: aHR0cHM6Ly9hbmNob3IuZm0vcy8xNGNjYTI0L3BvZGNhc3QvcnNz
   privacyPolicyUrl: /privacy/
-  postFooter: I drink glue!
+  postFooter: As a participant in the Amazon Associates Program---an affiliate
+    advertising programme designed to provide a means for sites to earn
+    advertising fees by advertising and linking to amazon.in---I may earn a
+    small commission from the purchases you make using the affiliate links, at
+    zero additional cost to you.
   amazon:
-    domain: ""
-    trackingId: ""
+    domain: amazon.in
+    trackingId: ramiyer08-21
   mastodon:
-    server: ""
-    username: ""
+    server: mastodon.online
+    username: ramiyer
   copyright:
-    icon: "<i class='fab fa-creative-commons'></i>&thinsp;<i class='fab fa-creative-commons-by'></i>&thinsp;<i class='fab fa-creative-commons-nc'></i>&thinsp;<i class='fab fa-creative-commons-sa'></i>"
-    message: "Ranhya 2025"
+    icon: <i class="fab fa-creative-commons"></i>&thinsp;<i class="fab
+      fa-creative-commons-by"></i>&thinsp;<i class="fab
+      fa-creative-commons-nc"></i>&thinsp;<i class="fab
+      fa-creative-commons-sa"></i>
+    message: "[Ram's blog](https://blog.ramiyer.me) by [Ram
+      Iyer](https://ramiyer.me) is licensed under a [Creative Commons
+      Attribution-NonCommercial-ShareAlike 4.0 International
+      License](http://creativecommons.org/licenses/by-nc-sa/4.0/)."
   dropCap:
     enable: true
   contactForm:
     id: xjvpplyr
   plausible:
-    enable: false
-    domain: ranya.run
+    enable: true
+    domain: blog.ramiyer.me
   googleAnalytics:
     enable: false
 
@@ -57,12 +67,22 @@ permalinks:
 menu:
   main:
     - identifier: archive
-      pre: "<i class='fas fa-archive'></i>"
+      pre: <i class='fas fa-archive'></i>
       title: Archive
       url: /archive/
       weight: 1
+    - identifier: youtube
+      pre: <i class='fab fa-youtube'></i>
+      title: YouTube
+      url: https://youtube.com/ramiyer
+      weight: 2
+    - identifier: podcast
+      pre: <i class='fas fa-headphones-alt'></i>
+      title: Podcast
+      url: https://anchor.fm/ramiyer
+      weight: 3
     - identifier: about
-      pre: "<i class='fas fa-info'></i>"
+      pre: <i class='fas fa-info'></i>
       title: About
       url: /about/
       weight: 4
