HOW TF DID THAT GET CAPITALIZED

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-BaseURL = "https://ranya.run"
+baseURL = "https://ranya.run"
 languageCode = "en"
 defaultContentLanguage = "en"
 author = "Nasu Rei"
