--- a/hugo.toml
+++ b/hugo.toml
@@ -21,24 +21,28 @@ summaryLength = 50
 # Navigation
 [menu]
 [[menu.main]]
-name = "Categories"
+identifier = "categories"
+pre = "<i class="fa-solid fa-filter"></i>"
+title = "Categories"
 url = "/category"
-weight = 4
+weight = 2
 
 [[menu.main]]
-name = "Tags"
+identifier = "tags"
+pre = "<i class="fa-solid fa-tags"></i>"
+title = "Tags"
 url = "/tags"
-weight = 5
+weight = 3
 
-[[menu.main]]
-identifier = "archive"
-pre = "<i class='fas fa-archive'></i>"
-title = "Archive"
-url = "/archive/"
-weight = 1
+#[[menu.main]]
+#identifier = "archive"
+#pre = "<i class='fas fa-archive'></i>"
+#title = "Archive"
+#url = "/archive/"
+#weight = 1
 [[menu.main]]
 identifier = "about"
 pre = "<i class='fas fa-info'></i>"
 title = "About"
 url = "/page/about/"
-weight = 4
+weight = 1
