--- a/hugo.toml
+++ b/hugo.toml
@@ -22,14 +22,14 @@ summaryLength = 50
 [menu]
 [[menu.main]]
 identifier = "categories"
-pre = "<i class="fa-solid fa-filter"></i>"
+pre = "<i class='fa-solid fa-filter'></i>"
 title = "Categories"
 url = "/category"
 weight = 2
 
 [[menu.main]]
 identifier = "tags"
-pre = "<i class="fa-solid fa-tags"></i>"
+pre = "<i class='fa-solid fa-tags'></i>"
 title = "Tags"
 url = "/tags"
 weight = 3
