--- a/hugo.toml
+++ b/hugo.toml
@@ -24,8 +24,11 @@ accentColour = "#FF6B6B"
   page = "/:title/"
 
 favicon = "/images/favicon.ico"
-  
 
+[params.copyright]
+  icon = "<i class=\"fab fa-creative-commons\"></i>&thinsp;<i class=\"fab fa-creative-commons-by\"></i>"
+  message = "[Ran's Blog](https://ranya.run) by [Nasu Rei](https://ranya.run/about/) is licensed under a [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/)."
+  
 # Navigation
 [menu]
 [[menu.main]]
