--- a/hugo.toml
+++ b/hugo.toml
@@ -25,6 +25,9 @@ accentColour = "#FF6B6B"
 
 favicon = "/images/favicon.ico"
 
+[author]
+    name = "Nasty Gollum"
+
 [params.copyright]
   icon = "<i class=\"fab fa-creative-commons\"></i>&thinsp;<i class=\"fab fa-creative-commons-by\"></i>"
   message = "[Ran's Blog](https://ranya.run) by [Nasu Rei](https://ranya.run/about/) is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International License](https://creativecommons.org/licenses/by-nc/4.0/)."
