--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,6 @@
 baseURL = "https://ranya.run"
 languageCode = "en"
 defaultContentLanguage = "en"
-author = "Nasu Rei"
 title = "૮ ・ﻌ・ა"
 theme = "typographical"
 
@@ -26,7 +25,7 @@ accentColour = "#FF6B6B"
 favicon = "/images/favicon.ico"
 
 [author]
-    name = "Nasty Gollum"
+    name = "Nasu Rei"
 
 [params.copyright]
   icon = "<i class=\"fab fa-creative-commons\"></i>&thinsp;<i class=\"fab fa-creative-commons-by\"></i>"
