--- a/hugo.toml
+++ b/hugo.toml
@@ -48,8 +48,15 @@ url = "/tags"
 weight = 3
 
 [[menu.main]]
+identifier = "archive"
+pre = "<i class='fas fa-archive'></i>"
+title = "Archive"
+url = "/archive/"
+weight = 1
+
+[[menu.main]]
 identifier = "about"
 pre = "<i class='fas fa-info'></i>"
 title = "About"
 url = "/about/"
-weight = 1
+weight = 2
