--- a/hugo.toml
+++ b/hugo.toml
@@ -14,6 +14,10 @@ enableRobotsTXT = true
 [params.dropCap]
   enable = true
 
+[Params]
+giscusTheme="preferred_color_scheme"
+disableComments=false
+
 summaryLength = 50
 
 accentColour = "#FF6B6B"
