--- a/hugo.toml
+++ b/hugo.toml
@@ -27,9 +27,10 @@ favicon = "/images/favicon.ico"
 [author]
     name = "Nasu Rei"
 
-# [params.copyright]
-  icon = "<i class=\"fab fa-#creative-commons\"></i>&thinsp;<i class=\"fab fa-creative-commons-by\"></i>"
-  message = "[Ran's Blog](https://ranya.run) by [Nasu Rei](https://ranya.run/about/) is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International License](https://creativecommons.org/licenses/by-nc/4.0/)."
+[params]
+    [params.copyright]
+        icon = "<i class="far fa-copyright"></i>"
+        message = "Glue Drinkers' Association, some rights reserved :D"
   
 # Navigation
 [menu]
